# 1

./: README.md
2/: autoconf.ppt
2/monitorFolder_2.0/fileMonitor/: AUTHORS  Makefile.am  Makefile.in  config.h  configure  configure.ac  fileMonitor.c  fileMonitor.conf
2/monitorFolder_2.0/fileMonitor/autom4te.cache/: traces.1
实验五 文件管理/: filemonitor.html
实验五 文件管理/monitorFolder_2.0/: 程序说明文档.txt
实验五 文件管理/monitorFolder_2.0/fileMonitor/: Makefile  NEWS  README  ReadMe.txt  beService.sh  config.h.in  config.status  fileMonitor  fileMonitor.sh  install-sh
实验五 文件管理/monitorFolder_2.0/fileMonitor/autom4te.cache/: output.1  traces.0
